--- a/pages/10135.html
+++ b/pages/10135.html
@@ -967,9 +967,57 @@ margin-left: 0em;
   \,,
 
 </annotation></semantics></math></div>
-<p>which hence gives an equivalent description of the global equivariant orbifold cohomology in <a class="maruku-eqref" href="#eq:CocyclesInTheSlice">(5)</a>.</p>
+<p>which hence gives an equivalent description of the global equivariant orbifold cohomology in <a class="maruku-eqref" href="#eq:CocyclesInTheSlice">(5)</a> in this case.</p>
 
+<p>Of course if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi><mo>→</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathcal{A} \to \mathbf{B}G</annotation></semantics></math> is 0-truncated, this only give cohomology in degree 0. To get back to the full cohomology, observe that for <a class="existingWikiWord" href="/nlab/show/n-localic+%28infinity%2C1%29-topos">0-localic</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> (i.e. with a plain 1-categorical <a class="existingWikiWord" href="/nlab/show/site">site</a> of definition) the previous argument generalizes immediately to the <a class="existingWikiWord" href="/nlab/show/internal+homs">internal homs</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><msub><mo stretchy="false">]</mo> <mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msubsup><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mrow><mo stretchy="false">/</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow> <mi>op</mi></msubsup><mo>×</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mrow><mo stretchy="false">/</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub><mo>⟶</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">
+  [-,-]_{\mathbf{B}G}
+  \;\colon\;
+  \mathbf{H}^{op}_{/\mathbf{B}G} \times \mathbf{H}_{/\mathbf{B}G}
+    \longrightarrow
+  \mathbf{H}
+
+</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>op</mi></msup><mo>×</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo>⟶</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">
+  [-,-]
+  \;\colon\;
+  \mathbf{H}^{op} \times \mathbf{H}
+    \longrightarrow
+  \mathbf{H}
+
+</annotation></semantics></math></div>
+<p>as</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msub><mo maxsize="1.2em" minsize="1.2em">]</mo> <mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msup><mo maxsize="1.2em" minsize="1.2em">]</mo> <mi>faith</mi></msup><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+  \big[
+    \mathcal{X}, \mathcal{A}
+  \big]_{\mathbf{B}G}
+  \;\simeq\;
+  \big[
+    \mathcal{X}, \mathcal{A}
+  \big]^{faith}
+  \,,
+
+</annotation></semantics></math></div>
+<p>From these then one re-obtains cohomology by applying the <a class="existingWikiWord" href="/nlab/show/shape+modality">shape modality</a>/<a class="existingWikiWord" href="/nlab/show/shape+via+cohesive+path+%E2%88%9E-groupoid">cohesive path ∞-groupoid</a>.</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mi>Π</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msub><mo maxsize="1.2em" minsize="1.2em">]</mo> <mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub></mtd> <mtd><mo>≃</mo><mi>Π</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msup><mo maxsize="1.2em" minsize="1.2em">]</mo> <mi>faith</mi></msup><mspace width="thinmathspace"></mspace><mo>,</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+\begin{aligned}
+  \Pi
+  \big[
+    \mathcal{X}, \mathcal{A}
+  \big]_{\mathbf{B}G}
+  &amp; \simeq
+  \Pi
+  \big[
+    \mathcal{X}, \mathcal{A}
+  \big]^{faith}
+  \,,
+\end{aligned}
+
+</annotation></semantics></math></div>
 <p>This perspective paves the way to the equivalent description in terms of systems of fixed point loci:</p>
+
+<blockquote>
+<p>some care needed here, to be expanded…</p>
+</blockquote>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 
@@ -978,10 +1026,10 @@ margin-left: 0em;
 <p>A key point of <a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global equivariant homotopy theory</a> is to generalize <a class="existingWikiWord" href="/nlab/show/Elmendorf%27s+theorem">Elmendorf's theorem</a> to this global situation, and express maps between <a class="existingWikiWord" href="/nlab/show/topological+stacks">topological stacks</a>, as above, in terms of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-presheaves">(∞,1)-presheaves</a> of <a class="existingWikiWord" href="/nlab/show/fixed+point">fixed point</a>-loci parameterized over on a suitable <a class="existingWikiWord" href="/nlab/show/orbit+category">orbit category</a>.</p>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global equivariant homotopy theory</a> the plain <a class="existingWikiWord" href="/nlab/show/orbit+category">orbit category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Orb</mi> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">Orb_G</annotation></semantics></math> used in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/Bredon+cohomology">Bredon cohomology</a> is replaced by the <a class="existingWikiWord" href="/nlab/show/global+orbit+category">global orbit category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Orb</mi> <mi>glb</mi></msub></mrow><annotation encoding="application/x-tex">Orb_{glb}</annotation></semantics></math> whose <a class="existingWikiWord" href="/nlab/show/objects">objects</a> are the <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a> <a class="existingWikiWord" href="/nlab/show/stacks">stacks</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>≔</mo><mo>*</mo><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G \coloneqq \ast\sslash G</annotation></semantics></math> and whose morphisms are the <a class="existingWikiWord" href="/nlab/show/faithful+functor">faithful</a>/<a class="existingWikiWord" href="/nlab/show/0-truncated+morphism+of+an+%28%E2%88%9E%2C1%29-category">0-truncated</a> morphisms between these. Then any <a class="existingWikiWord" href="/nlab/show/stack">stack</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math> (<a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a>, <a class="existingWikiWord" href="/nlab/show/orbispace">orbispace</a>) becomes an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-presheaf">(∞,1)-presheaf</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">y \mathcal{X}</annotation></semantics></math> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Orb</mi> <mi>glb</mi></msub></mrow><annotation encoding="application/x-tex">Orb_{glb}</annotation></semantics></math> by the evident “external <a class="existingWikiWord" href="/nlab/show/Yoneda+embedding">Yoneda embedding</a>”</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>y</mi><mi>𝒳</mi><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><msup><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>faith</mi></msup><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>,</mo><mi>𝒳</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>y</mi><mi>𝒳</mi><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mi>Π</mi><mo stretchy="false">[</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>,</mo><mi>𝒳</mi><msup><mo stretchy="false">]</mo> <mi>faith</mi></msup><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   y \mathcal{X}
   \;\coloneqq\;
-  \mathbf{H}^{faith}( \mathbf{B}G, \mathcal{X} )
+  \Pi [ \mathbf{B}G, \mathcal{X}]^{faith}
   \,.
 
 </annotation></semantics></math></div>
@@ -990,18 +1038,18 @@ margin-left: 0em;
 <p>Notice that, by the condition of faithfulness, a morphism of the form <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo><mo>→</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\ast \to \mathbf{B}G \to \mathcal{X}</annotation></semantics></math> necessarily hits a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+point">fixed point</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math>, i.e. a point whose <a class="existingWikiWord" href="/nlab/show/isotropy+group">isotropy group</a> contains <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>. In this sense <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">y \mathcal{X}</annotation></semantics></math> is the <em>global system of fixed point loci</em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math>.</p>
 
 <p>The generalization of <a class="existingWikiWord" href="/nlab/show/Elmendorf%27s+theorem">Elmendorf's theorem</a> to global equivariant homotopy theory, hence to the application of orbifold cohomology, is now the statement that this construction induces <a class="existingWikiWord" href="/nlab/show/equivalence+in+an+%28%E2%88%9E%2C1%29-category">equivalences</a> of cocycle <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-groupoids">∞-groupoids</a></p>
-<div class="maruku-equation" id="eq:GlobalElmendorfTheorem"><span class="maruku-eq-number">(7)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>faith</mi></msup><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>PSh</mi> <mn>∞</mn></msub><mo stretchy="false">(</mo><msub><mi>Orb</mi> <mi>glb</mi></msub><mo stretchy="false">)</mo><mo stretchy="false">(</mo><mi>y</mi><mi>𝒳</mi><mo>,</mo><mi>y</mi><mi>𝒳</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation" id="eq:GlobalElmendorfTheorem"><span class="maruku-eq-number">(7)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Π</mi><mo stretchy="false">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msup><mo stretchy="false">]</mo> <mi>faith</mi></msup><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>PSh</mi> <mn>∞</mn></msub><mo stretchy="false">(</mo><msub><mi>Orb</mi> <mi>glb</mi></msub><mo stretchy="false">)</mo><mo stretchy="false">(</mo><mi>y</mi><mi>𝒳</mi><mo>,</mo><mi>y</mi><mi>𝒳</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   
-  \mathbf{H}^{faith}
-  \big(
+  \Pi
+  [ 
     \mathcal{X}, \mathcal{A}
-  \big)
+  ]^{faith}
   \;\simeq\;
   PSh_{\infty}(Orb_{glb}) ( y \mathcal{X}, y \mathcal{X} )
   \,.
 
 </annotation></semantics></math></div>
-<p>This is the staement of <a href="#HenriquesGepner07">Henriques-Gepner 07, main theorem (4) on p. 5 in version (2) according to p. 8</a>. With particular emphasis on its application to orbifold cohomology, this is highlighted in (<a href="#Schwede17">Schwede 17, Introduction</a>, <a href="#Schwede18">Schwede 18, p. ix-x</a>). See also <a href="#Rezk14">Rezk 14, section 4</a>.</p>
+<p>This is the statement of <a href="#HenriquesGepner07">Henriques-Gepner 07, main theorem (4) on p. 5 in version (2) according to p. 8</a>. With particular emphasis on its application to orbifold cohomology, this is highlighted in (<a href="#Schwede17">Schwede 17, Introduction</a>, <a href="#Schwede18">Schwede 18, p. ix-x</a>). See also <a href="#Rezk14">Rezk 14, section 4</a>.</p>
 
 <p>In summary, under the <em>Gepner-Henriques global Elmendorf theorem</em>, the definition of global equivariant orbifold cohomology according to <a class="maruku-eqref" href="#eq:CocyclesInTheSlice">(5)</a> becomes equivalent, via <a class="maruku-eqref" href="#eq:Faithful">(6)</a> and <a class="maruku-eqref" href="#eq:GlobalElmendorfTheorem">(7)</a>, to the cohomology in the <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a> over the <a class="existingWikiWord" href="/nlab/show/global+orbit+category">global orbit category</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo stretchy="false">(</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><msub><mi>π</mi> <mn>0</mn></msub><msub><mi>PSh</mi> <mn>∞</mn></msub><mo stretchy="false">(</mo><msub><mi>Orb</mi> <mi>glb</mi></msub><mo stretchy="false">)</mo><mo stretchy="false">(</mo><mi>y</mi><mi>𝒳</mi><mo>,</mo><mi>y</mi><mi>𝒜</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
@@ -1083,14 +1131,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 14, 2018 at 06:48:40.
+  Last revised on November 19, 2018 at 04:27:38.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
