--- a/pages/8771.html
+++ b/pages/8771.html
@@ -319,6 +319,7 @@ margin-left: 0em;
 <li><a href='#terminology'>Terminology</a></li>
 <li><a href='#properties'>Properties</a></li>
 <li><a href='#examples'>Examples</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 </ul>
 </div>
 
@@ -355,20 +356,30 @@ margin-left: 0em;
 <p>The <a class="existingWikiWord" href="/nlab/show/tropical+semiring">tropical algebra</a> and the <a class="existingWikiWord" href="/nlab/show/max-plus+algebra">max-plus algebra</a> are idempotent semirings.</p>
 </li>
 </ul>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/ring">ring</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/rig">rig</a></li>
+
+<li><span class="newWikiWord">idempotent semifield<a href="/nlab/new/idempotent+semifield">?</a></span></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 06:14:39.
+  Last revised on November 19, 2018 at 07:32:35.
   See the <a href="https://ncatlab.org/nlab/history/idempotent semiring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/idempotent semiring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
