--- a/pages/5123.html
+++ b/pages/5123.html
@@ -773,9 +773,7 @@ margin-left: 0em;
 <p>The specific maps introduced by Eilenberg-Mac Lane have stronger properties which for simplicial sets <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo>,</mo><mi>L</mi></mrow><annotation encoding="application/x-tex">K,L</annotation></semantics></math> make <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo stretchy="false">(</mo><mi>K</mi><mo stretchy="false">)</mo><mo>⊗</mo><mi>C</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">C(K) \otimes C(L)</annotation></semantics></math> a strong deformation retract of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo stretchy="false">(</mo><mi>K</mi><mo>×</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">C(K \times L)</annotation></semantics></math>. This is exploited in</p>
 
 <ul>
-<li><span class="newWikiWord">Ronny Brown<a href="/nlab/new/Ronny+Brown">?</a></span>, <em>The twisted Eilenberg-Zilber theorem</em>. Simposio di Topologia (Messina, 1964), Edizioni Oderisi, Gubbio (1965), 33–37.
-<p><a href="http://pages.bangor.ac.uk/~mas010/pdffiles/twistedez.pdf">pdf</a></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/Ronnie+Brown">Ronnie Brown</a>, <em>The twisted Eilenberg-Zilber theorem</em>. Simposio di Topologia (Messina, 1964), Edizioni Oderisi, Gubbio (1965), 33–37. <a href="http://pages.bangor.ac.uk/~mas010/pdffiles/twistedez.pdf">pdf</a></li>
 </ul>
 </body></html>
 
@@ -783,14 +781,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 08:33:49.
+  Last revised on November 19, 2018 at 09:48:53.
   See the <a href="https://ncatlab.org/nlab/history/Eilenberg-Zilber map" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Eilenberg-Zilber+map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Eilenberg-Zilber+map/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Eilenberg-Zilber+map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Eilenberg-Zilber+map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Eilenberg-Zilber+map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Eilenberg-Zilber+map/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Eilenberg-Zilber+map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Eilenberg-Zilber+map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Eilenberg-Zilber map/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
