--- a/pages/18905.html
+++ b/pages/18905.html
@@ -991,6 +991,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a>, <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a></p>
 </li>
 
@@ -1226,14 +1230,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 09:45:17.
+  Last revised on November 19, 2018 at 10:55:24.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
