--- a/pages/9687.html
+++ b/pages/9687.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1065,8 +1065,10 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#possible_realizations'>Possible realizations</a></li>
+<li><a href='#open_problem'>Open problem</a></li>
+<li><a href='#potential_solutions'>Potential solutions</a></li>
 <ul>
+<li><a href='#ViaCalorons'>Via Calorons</a></li>
 <li><a href='#InN2SYM'>In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Wittern theory</a></li>
 <li><a href='#ForN1SYMViaMTheoryOnG2Manifolds'>In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li>
 </ul>
@@ -1092,7 +1094,69 @@ margin-left: 0em;
 
 <p>Confinement is a <a class="existingWikiWord" href="/nlab/show/non-perturbative+effect">non-perturbative effect</a> (e.g <a href="#Espiru94">Espiru 94</a>).</p>
 
-<h2 id="possible_realizations">Possible realizations</h2>
+<h2 id="open_problem">Open problem</h2>
+
+<p>While <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> as well as <a class="existingWikiWord" href="/nlab/show/lattice+gauge+theory">lattice gauge theory</a>-computer simulation clearly show that confinement takes place, a real theoretical understanding is missing (see also at <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>). Here are quotes from some references highlighting the open problem:</p>
+
+<ul>
+<li id="Kutschke96">Robert Kutschke, section 3.1 <em>Heavy flavour spectroscopy</em>, in D. Bugg (ed.), <em>Hadron Spectroscopy and the Confinement Problem</em>, Proceedings of a NATO Advanced Study Institute, Plenum Press 1996 (<a href="https://www.springer.com/cn/book/9780306453038">doi:10.1007/978-1-4613-0375-6</a>)</li>
+</ul>
+
+<blockquote>
+<p>While it is generally believed that QCD is the correct fundamental theory of the strong interactions there are, as yet, no practical means to produce full QCD calculations of hadron masses and their decay widths.</p>
+</blockquote>
+
+<ul>
+<li>Jeff Greensite, <em>An Introduction to the Confinement Problem</em>, Lecture Notes in Physics, Volume 821, 2011 (<a href="https://link.springer.com/book/10.1007%2F978-3-642-14382-3">doi:10.1007/978-3-642-14382-3</a>)</li>
+</ul>
+
+<blockquote>
+<p>Because of the great importance of the standard model, and the central role it plays in our understanding of particle physics, it is unfortunate that, in one very important respect, we don’t really understand how it works. The problem lies in the sector dealing with the interactions of quarks and gluons, the sector known as Quantum Chromodynamics or QCD. We simply do not know for sure why quarks and gluons, which are the fundamental fields of the theory, don’t show up in the actual spectrum of the theory, as asymptotic particle states. There is wide agreement about what must be happening in high energy particle collisions: the formation of color electric flux tubes among quarks and antiquarks, and the eventual fragmentation of those flux tubes into mesons and baryons, rather than free quarks and gluons. But there is no general agreement about why this is happening, and that limitation exposes our general ignorance about the workings of non-abelian gauge theories in general, and QCD in particular, at large distance scales.</p>
+</blockquote>
+
+<ul>
+<li id="Brambilla14">Brambilla et al.. <em>QCD and strongly coupled gauge theories: challenges and perspectives</em>, Eur Phys J C Part Fields. 2014; 74(10): 2981 (<a href="https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-014-2981-5">doi:10.1140/epjc/s10052-014-2981-5</a>)</li>
+</ul>
+
+<blockquote>
+<p>The success of the technique does not remove the challenge of understanding the non-perturbative aspects of the theory. The two aspects are deeply intertwined. The Lagrangian of QCD is written in terms of quark and gluon degrees of freedom which become apparent at large energy but remain hidden inside hadrons in the low-energy regime. This confinement property is related to the increase of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>α</mi> <mi>s</mi></msub></mrow><annotation encoding="application/x-tex">\alpha_s</annotation></semantics></math> at low energy, but it has never been demonstrated analytically.</p>
+
+<p>We have clear indications of the confinement of quarks into hadrons from both experiments and lattice QCD. Computations of the heavy quark–antiquark potential, for example, display a linear behavior in the quark–antiquark distance, which cannot be obtained in pure perturbation theory. Indeed the two main characteristics of QCD: confinement and the appearance of nearly massless pseudoscalar mesons, emergent from the spontaneous breaking of chiral symmetry, are non-perturbative phenomena whose precise understanding continues to be a target of research.</p>
+
+<p>Even in the simpler case of gluodynamics in the absence of quarks, we do not have a precise understanding of how a gap in the spectrum is formed and the glueball spectrum is generated.</p>
+</blockquote>
+
+<ul>
+<li>J J Cobos-Martínez, <em>Non-perturbative QCD and hadron physics</em> 2016 J. Phys.: Conf. Ser. 761 012036 (<a href="http://iopscience.iop.org/article/10.1088/1742-6596/761/1/012036">doi:10.1088/1742-6596/761/1/012036</a>)</li>
+</ul>
+
+<blockquote>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>⋯</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[\cdots]</annotation></semantics></math> the QCD Lagrangian does not by itself explain the data on strongly interacting matter, and it is not clear how the observed bound states, the hadrons, and their properties arise from QCD. Neither confinement nor dynamical chiral symmetry breaking (DCSB) is apparent in QCD’s lagrangian, yet they play a dominant role in determining the observable characteristics of QCD. The physics of strongly interacting matter is governed by emergent phenomena such as these, which can only be elucidated through the use of non-perturbative methods in QCD [4, 5, 6, 7]</p>
+</blockquote>
+
+<ul>
+<li id="INFN15"><a href="https://web.infn.it/csn1/index.php/en/">Istituto Nazionale di Fisica Nucleare</a>, <em>What Next: White Paper of the INFN-CSN1</em> <em>Proposal for a long term strategy for accelerator based experiments</em>, Frascati Phys.Ser. 60 (2015) 1-302 (2015-05-29) (<a href="http://inspirehep.net/record/1374543/">spire:1374543</a>, <a href="http://www.lnf.infn.it/sis/frascatiseries/Volume60/Volume60.pdf">pdf</a> ) chapter 7: <em>Hadron Physics and non-perturbative QCD</em> (<a href="http://www.infn.it/csn1/White_paper_documents/NPQCD.pdf">pdf</a>)</li>
+</ul>
+
+<blockquote>
+<p>Experimentally, there is a large number of facts that lack a detailed qualitative and quantitative explanation. The most spectacular manifestation of our lack of theoretical understanding of QCD is the failure to observe the elementary degrees of freedom, quarks and gluons, as free asymptotic states (color con- finement) and the occurrence, instead, of families of massive mesons and baryons (hadrons) that form approximately linear Regge trajectories in the mass squared. The internal, partonic structure of hadrons, and nucleons in particular, is still largely mysterious. Since protons and neutrons form almost all the visible matter of the Universe, it is of basic importance to explore their static and dynamical properties in terms of quarks and gluons interacting according to QCD dynamics.</p>
+</blockquote>
+
+<h2 id="potential_solutions">Potential solutions</h2>
+
+<h3 id="ViaCalorons">Via Calorons</h3>
+
+<p>It has been argued that, after <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>, confinement may be derived from the behaviour of <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a> (<a href="#SchaeferShuryak96">Schaefer-Shuryak 96, section III D</a>), or rather their <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">positive temperature</a>-incarnations as <em><a class="existingWikiWord" href="/nlab/show/calorons">calorons</a></em>, <a href="#Greensite11">Greensite 11, section 8.5</a>:</p>
+
+<blockquote>
+<p>it is natural to wonder if <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> could be derived from some <a class="existingWikiWord" href="/nlab/show/semiclassical+approximation">semiclassical</a> treatment of <a class="existingWikiWord" href="/nlab/show/Yang%E2%80%93Mills+theory">Yang–Mills theory</a> based on the <a class="existingWikiWord" href="/nlab/show/instanton">instanton</a> solutions of <a class="existingWikiWord" href="/nlab/show/nonabelian+group">non-abelian</a> <a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a>. The <a class="existingWikiWord" href="/nlab/show/BPST+instanton">standard</a> <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a>, introduced by Belavin et al. (<a href="BPTS-instanton#BelavinPolyakovSchwartzTyupkin75">40</a>), do not seem to work; their <a class="existingWikiWord" href="/nlab/show/field+strengths">field strengths</a> fall off too rapidly to produce the desired magnetic disorder in the vacuum.</p>
+
+<p>In recent years, however, it has been realized that instanton solutions at <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">finite temperature</a>, known as <em><a class="existingWikiWord" href="/nlab/show/calorons">calorons</a></em>, might do the job. These caloron solutions were introduced independently by Kraan and van Baal (<a href="caloron#KraanVanBaal98">41</a>, <a href="caloron#KraanVanBaal98b">42</a>) and Lee and Lu (<a href="caloron#LeeLu98">43</a>) (KvBLL), and they have the remarkable property of containing <a class="existingWikiWord" href="/nlab/show/monopole">monopole</a> constituents which may, depending on the type of <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a>, be widely separated.</p>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[...]</annotation></semantics></math></p>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a> idea is probably the most promising current version of <a class="existingWikiWord" href="/nlab/show/monopole">monopole</a> <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in pure non-abelian gauge theories, but it is basically (in certain <a class="existingWikiWord" href="/nlab/show/gauge+fixing">gauges</a>) a superposition of <a class="existingWikiWord" href="/nlab/show/monopoles">monopoles</a> with spherically symmetric abelian fields, and this leads to the same questions raised in connection with monopole Coulomb gases.</p>
+</blockquote>
 
 <h3 id="InN2SYM">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Wittern theory</h3>
 
@@ -1178,7 +1242,7 @@ margin-left: 0em;
 <p>Textbook accounts include</p>
 
 <ul>
-<li>
+<li id="Greensite11">
 <p>Jeff Greensite, <em>An Introduction to the Confinement Problem</em>, Lecture Notes in Physics, Volume 821, 2011 (<a href="https://link.springer.com/book/10.1007%2F978-3-642-14382-3">doi:10.1007/978-3-642-14382-3</a>)</p>
 </li>
 
@@ -1245,10 +1309,22 @@ margin-left: 0em;
 
 <p>(That this is indeed the case has not yet been demonstarted for plain Yang-Mills theory, but it was later shown for <a class="existingWikiWord" href="/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory">N=2 D=4 super Yang-Mills theory</a> in (<a href="#SeibergWitten94">Seiberg-Witten 94</a>). What this does or does not imply for the case of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is discussed in (<a href="#Yung00">Yung 00</a>) ).</p>
 
-<p>The relation to <a class="existingWikiWord" href="/nlab/show/QCD+instantons">QCD instantons</a>/<a class="existingWikiWord" href="/nlab/show/monopole">monopoles</a> in the <a class="existingWikiWord" href="/nlab/show/QCD+vacuum">QCD vacuum</a> is discussed in section III D of</p>
+<p>The relation to <a class="existingWikiWord" href="/nlab/show/QCD+instantons">QCD instantons</a>/<a class="existingWikiWord" href="/nlab/show/monopole">monopoles</a> in the <a class="existingWikiWord" href="/nlab/show/QCD+vacuum">QCD vacuum</a> is discussed in</p>
 
 <ul>
-<li id="SchaeferShuryak">T. Schaefer, E. Shuryak, <em>Instantons in QCD</em>, Rev. Mod. Phys.70:323-426,1998 (<a href="http://arxiv.org/abs/hep-ph/9610451">arXiv:hep-ph/9610451</a>)</li>
+<li id="SchaeferShuryak96">T. Schaefer, E. Shuryak, section III D of <em>Instantons in QCD</em>, Rev. Mod. Phys.70:323-426,1998 (<a href="http://arxiv.org/abs/hep-ph/9610451">arXiv:hep-ph/9610451</a>)</li>
+</ul>
+
+<p>and analogously (at <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">positive temperature</a>) relation to <em><a class="existingWikiWord" href="/nlab/show/calorons">calorons</a></em>:</p>
+
+<ul>
+<li>
+<p><a href="#Greensite11">Greensite 11, section 8.5</a></p>
+</li>
+
+<li>
+<p>P. Gerhold, E.-M. Ilgenfritz, M. Müller-Preussker, <em>An <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(2)</annotation></semantics></math> KvBLL caloron gas model and confinement</em>, Nucl.Phys.B760:1-37, 2007 (<a href="https://arxiv.org/abs/hep-ph/0607315">arXiv:hep-ph/0607315</a>)</p>
+</li>
 </ul>
 
 <p>For further developments see</p>
@@ -1336,14 +1412,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 10:15:08.
+  Last revised on November 19, 2018 at 11:59:36.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
