--- a/pages/2632.html
+++ b/pages/2632.html
@@ -890,7 +890,34 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a><ul><li><a href="#npov">nPOV</a></li></ul></li><li><a href="#definition">Definition</a><ul><li><a href="#quantum_mechanical_systems">Quantum mechanical systems</a></li><li><a href="#observables_and_states">Observables and states</a></li><li><a href="#spaces_of_states">Spaces of states</a></li><li><a href="#flows_and_time_evolution">Flows and time evolution</a></li><li><a href="#Subsystems">Quantum subsystems</a></li></ul></li><li><a href="#quantum_physics_in_general">Quantum physics in general</a></li><li><a href="#formulations_and_formalization">Formulations and formalization</a><ul><li><a href="#ordertheoretic_structure_in_quantum_mechanics">Order-theoretic structure in quantum mechanics</a></li><li><a href="#quantum_mechanics_in_terms_of_compact_categories">Quantum mechanics in terms of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>†</mo></mrow><annotation encoding="application/x-tex">\dagger</annotation></semantics></math>-compact categories</a></li></ul></li><li><a href="#foundational_theorems_of_quantum_mechanics">Foundational theorems of quantum mechanics</a></li><li><a href="#applications_of_quantum_mechanics">Applications of quantum mechanics</a></li><li><a href="#examples">Examples</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#npov'>nPOV</a></li>
+</ul>
+<li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#quantum_mechanical_systems'>Quantum mechanical systems</a></li>
+<li><a href='#observables_and_states'>Observables and states</a></li>
+<li><a href='#spaces_of_states'>Spaces of states</a></li>
+<li><a href='#flows_and_time_evolution'>Flows and time evolution</a></li>
+<li><a href='#Subsystems'>Quantum subsystems</a></li>
+</ul>
+<li><a href='#quantum_physics_in_general'>Quantum physics in general</a></li>
+<li><a href='#formulations_and_formalization'>Formulations and formalization</a></li>
+<ul>
+<li><a href='#ordertheoretic_structure_in_quantum_mechanics'>Order-theoretic structure in quantum mechanics</a></li>
+<li><a href='#quantum_mechanics_in_terms_of_compact_categories'>Quantum mechanics in terms of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>†</mo></mrow><annotation encoding="application/x-tex">\dagger</annotation></semantics></math>-compact categories</a></li>
+</ul>
+<li><a href='#foundational_theorems_of_quantum_mechanics'>Foundational theorems of quantum mechanics</a></li>
+<li><a href='#applications_of_quantum_mechanics'>Applications of quantum mechanics</a></li>
+<li><a href='#examples'>Examples</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>While <a class="existingWikiWord" href="/nlab/show/classical+mechanics">classical mechanics</a> considers deterministic evolution of particles and fields, quantum physics follows nondeterministic evolution where the probability of various outcomes of <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a> may be predicted from the state in a Hilbert space representing the possible reality: that state undergoes a unitary evolution, what means that the generator of the evolution is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msqrt><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msqrt></mrow><annotation encoding="application/x-tex">\sqrt{-1}</annotation></semantics></math> times a Hermitean operator called the <em>quantum Hamiltonian</em> or the <a class="existingWikiWord" href="/nlab/show/Hamiltonian+operator">Hamiltonian operator</a> of the system. The theoretical framework for describing this precisely is the <strong>quantum mechanics</strong>. It involves a constant of nature, Planck constant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi></mrow><annotation encoding="application/x-tex">h</annotation></semantics></math>; some quantum systems with spatial interpretation in the limit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">h\to 0</annotation></semantics></math> lead to classical mechanical systems (not all: some phenomena including non-integer spin are purely quantum mechanical, but the properties depending on their existence survive in the “classical” limit); in limited generality, one can motivate and find the <em>nonfunctorial</em> procedure to single out a <a class="existingWikiWord" href="/nlab/show/right+inverse">right inverse</a> to taking this <em>classical limit</em> under the name <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a>.</p>
@@ -1267,6 +1294,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+tunneling">quantum tunneling</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/supersymmetric+quantum+mechanics">supersymmetric quantum mechanics</a></p>
 </li>
 
@@ -1440,14 +1471,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 03:38:06.
+  Last revised on November 19, 2018 at 11:00:21.
   See the <a href="https://ncatlab.org/nlab/history/quantum mechanics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+mechanics/62" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(62 revisions)</span> | <a href="/nlab/show/diff/quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+mechanics/63" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(63 revisions)</span> | <a href="/nlab/show/diff/quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quantum mechanics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
